# discord-model-gif-bot

./: .gitignore  Cargo.toml  Dockerfile  README.md  start.sh
.github/workflows/: publish.yml
src/: main.rs
