[package]
name = "discord-model-gif-bot"
version = "0.1.0"
edition = "2024"

[dependencies]
serenity = "0.12"
tokio = { version = "1.0", features = ["macros", "rt-multi-thread", "process"] }
tempfile = "3"
uuid = { version = "1.17", features = ["v4"] }
image = { version = "0", features = ["png", "jpeg"] }
libmeshthumbnail = { git = "https://github.com/suchmememanyskill/mesh-thumbnail", rev = "8f9ebc6553029a4bbe7203f5b0e2bb06e415076f", features = ["step"]}
vek = "0"

[profile.release]
strip = true
lto = true
codegen-units = 1
